# automated-statusing-tool

./: .gitignore  PR_FORM.md  README.md  docker-compose.yml  main.py  pyproject.toml  test.py  win-shares.env
ast_engine/: .gitignore  README.md  model_config.py  pyproject.toml
ast_engine/config/: README.md  __init__.py  data_registry_creator.py  datasets.yaml  drive_map.conf  drive_mapper.sh  logging.py  logging_config.py  settings.py  spreadsheet_ingestion.py  startup.py  wip_pydantic_structure.py  wip_pydantic_structure_r1.py
ast_engine/config/data/: Test_Registry.xlsx  datasets.yaml
ast_engine/config/registry/: __init__.py  enrichment.py  models.py  query.py  utils.py
ast_engine/core/: execution.py  results.py
ast_engine/core/aoi/: README.md  __init__.py  aoi_builder.py  exceptions.py  inspector.py  models.py  normalization_reporter.py  normalizer.py  parts_builder.py  utils.py  validator.py
ast_engine/core/data_adapters/: base.py  exceptions.py  where_compiler.py
ast_engine/core/operator/: adjacent.py  overlay.py  proximity.py
ast_engine/core/validation/: README.md  spatial_validation.py
ast_engine/storage/: __init__.py  checksums.py  key_builder.py  local_writer.py  manifest.py  models.py  publisher.py  s3_writer.py  writer.py
ast_engine/tests/: conftest.py
ast_engine/tests/data/: Test_Mixed_Geometry.kml  Test_Registry.xlsx  Test_Registry.yaml  WHSE_CADASTRE_PMBC_PARCEL_FABRIC_POLY_FA_SVW.sbn  hard_coded_tab1.yaml  sample_registry.yaml  ~$Test_Registry.xlsx
ast_engine/tests/helpers/: aoi_assertions.py  aoi_geometry.py  aoi_requests.py
ast_engine/tests/registry/: Test_Registry.yaml  Test_Registry_2.xlsx  (+2 more)
ast_engine/utils/: diagnostics.py  logging_config.py
(+163 files in other folders)
