[project]
name = "ast_engine"
version = "0.1.0"
description = "AST is yet another spatial overlay application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.3",
    "oracledb>=2.0",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "shapely>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ast_engine*"]

[tool.pytest.ini_options]
markers = [
  "unit: fast unit tests with no external dependencies"
]
